--- a/src/PA/GeneralBundle/Resources/views/Default/index.html.twig
+++ b/src/PA/GeneralBundle/Resources/views/Default/index.html.twig
@@ -12,7 +12,7 @@
 	<!-- Wrapper for slides -->
 	<div class="carousel-inner">
 	    <div class="item active">
-	        <div class="fill" style="background-image:url('http://localhost/ProjetAnnonces/web/images/slider-1.jpeg');"></div>
+	        <div class="fill" style="background-image:url('web/images/slider-1.jpeg');"></div>
 	        <div class="carousel-caption">
 	            <h2>{{'Legend_slide1' | trans}}</h2>
 	        </div>
