--- a/src/PA/AnnonceBundle/Resources/views/Annonce/ajouterannonce.html.twig
+++ b/src/PA/AnnonceBundle/Resources/views/Annonce/ajouterannonce.html.twig
@@ -27,10 +27,35 @@
 		$("#form_creer_annonce").addClass("form-horizontal");
 		$("#form_creer_annonce").children().addClass( "form-group" );
 		$("label").addClass( "col-sm-2 control-label");
-		$("input").wrap('<div class="col-sm-10"></div>');
-		$("select").wrap('<div class="col-md-3"></div>');
-		$("textarea").wrap('<div class="col-sm-10"></div>');
 		$("#form_creer_annonce :input").addClass( "form-control");
+		$("#pa_annoncebundle_annonce_an_titre").wrap('<div class="col-xs-3"></div>');
+		$("#pa_annoncebundle_annonce_an_image").wrap('<div class="col-xs-6"></div>');
+		$("#pa_annoncebundle_annonce_an_categorie").wrap('<div class="col-xs-3"></div>');
+		$("#pa_annoncebundle_annonce_an_prix").wrap('<div class="col-xs-2"></div>');
+		$("#pa_annoncebundle_annonce_an_description").wrap('<div class="col-sm-10"></div>');
+		$("#pa_annoncebundle_annonce_an_departement").wrap('<div class="col-xs-3"></div>');
+		$("#pa_annoncebundle_annonce_an_cp").wrap('<div class="col-xs-4"></div>');
+		$("#pa_annoncebundle_annonce_an_publie").removeClass();
+		$("#pa_annoncebundle_annonce_an_publie").wrap('<div class="col-xs-1"></div>');
 	});
+
+	$("#pa_annoncebundle_annonce_an_departement").on('change', function() {
+		var val = $(this).val(); // On récupère le département
+ 
+        if(val != '') {
+            $("#pa_annoncebundle_annonce_an_cp").empty(); // On vide la liste des secteurs
+             
+            $.ajax({
+                type: "POST",
+           		url: "{{ path('pa_annonce_secteur') }}", 
+            	data: {'depart': val}, // On envoie au controleur le paramètre département
+                success: function(json) { 
+                    $.each(json, function(index, value) { //On affiche dans la liste la réponse du controleur (JSON)
+                        $("#pa_annoncebundle_annonce_an_cp").append('<option value="'+ index +'">'+ value +'</option>');
+                    });
+                }
+            });
+        }
+    });
 </script>
 {% endblock %}
