--- a/src/PA/GeneralBundle/Resources/views/Default/deconnexion.html.twig
+++ b/src/PA/GeneralBundle/Resources/views/Default/deconnexion.html.twig
@@ -13,8 +13,7 @@
 
 	<!-- First section -->
 	<div class="row">
-		<h2>Bienvenue sur la page de mon compte.</h2>
-	    <p>{{ 'fil_ariane_text' | trans }}<a title="Accueil" href="{{ path('pa_general_accueil') }}">{{ 'Accueil_title' | trans }}</a> >> <a href="{{ path('pa_general_mon_compte') }}">{{ 'Mon_compte_title' | trans }}</a></p>
+		<h2>Bienvenue sur la page de déconnexion.</h2>
 	<!-- /.row -->
 
 	</div>
