--- a/src/PA/GeneralBundle/Resources/views/Default/demandes.html.twig
+++ b/src/PA/GeneralBundle/Resources/views/Default/demandes.html.twig
@@ -14,6 +14,28 @@
 	<!-- First section -->
 	<div class="row">
 		<h2>Bienvenue sur la page des demandes.</h2>
+	    <p>{{ 'fil_ariane_text' | trans }}<a title="Accueil" href="{{ path('pa_general_accueil') }}">{{ 'Accueil_title' | trans }}</a> >> <a href="{{ path('pa_general_demandes') }}">{{ 'Demandes_title' | trans }}</a></p>
+	<!-- /.row -->
+
+	<!-- Portfolio Section -->
+	<div class="row">
+	    <div class="col-lg-12">
+	        <h2 class="page-header">{{'h2_demandes_title' | trans }}</h2>
+	    </div>
+	    {% set entities = "" %}
+	    {% if entities is not empty %}
+	    {% for entity in entities %}
+	        {{ entity.username|e }}
+		    <div class="col-md-4 col-sm-6">
+		        <a href="portfolio-item.html">
+		            <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450" alt="">
+		        </a>
+		    </div>
+	    {% endfor %}
+	    {% else %}
+	    {{'no_result_demandes' | trans}}
+	    {% endif %}
+	</div>
 	<!-- /.row -->
 
 	</div>
