--- a/src/PA/GeneralBundle/Resources/views/Default/index.html.twig
+++ b/src/PA/GeneralBundle/Resources/views/Default/index.html.twig
@@ -12,19 +12,19 @@
 	<!-- Wrapper for slides -->
 	<div class="carousel-inner">
 	    <div class="item active">
-	        <div class="fill" style="background-image:url('web/images/slider-1.jpeg');"></div>
+	        <div class="fill" style="background-image:url('/web/images/slider-1.jpeg');"></div>
 	        <div class="carousel-caption">
 	            <h2>{{'Legend_slide1' | trans}}</h2>
 	        </div>
 	    </div>
 	    <div class="item">
-	        <div class="fill" style="background-image:url('http://localhost/ProjetAnnonces/web/images/slider-2.jpeg');"></div>
+	        <div class="fill" style="background-image:url('/web/images/slider-2.jpeg');"></div>
 	        <div class="carousel-caption">
 	            <h2>{{'Legend_slide2' | trans}}</h2>
 	        </div>
 	    </div>
 	    <div class="item">
-	        <div class="fill" style="background-image:url('http://localhost/ProjetAnnonces/web/images/slider-3.jpeg');"></div>
+	        <div class="fill" style="background-image:url('/web/images/slider-3.jpeg');"></div>
 	        <div class="carousel-caption">
 	            <h2>{{'Legend_slide3' | trans}}</h2>
 	        </div>
@@ -49,6 +49,8 @@
 	        <h1 class="page-header">
 	            {{'message_bienvenue_top' | trans}}
 	        </h1>
+	        <p>{{ 'fil_ariane_text' | trans }}<a title="Accueil" href="index.php">{{ 'Accueil_title' | trans }}</a></p>
+	        <hr />
 	    </div>
 	    <div class="col-md-4">
 	        <div class="panel panel-default">
