--- a/src/PA/GeneralBundle/Resources/views/Default/mesAnnonces.html.twig
+++ b/src/PA/GeneralBundle/Resources/views/Default/mesAnnonces.html.twig
@@ -7,15 +7,47 @@
 	<div class="clear"></div>
 	<!-- /.row -->
 
-	<!-- ================ -->
-	<!-- Mentions Section -->
-	<!-- ================ -->
+	<!-- =========== -->
+	<!-- Ads Section -->
+	<!-- =========== -->
 
 	<!-- First section -->
 	<div class="row">
 		<h2>Bienvenue sur la page de mes annonces.</h2>
-	<!-- /.row -->
+	    <p>{{ 'fil_ariane_text' | trans }}<a title="Accueil" href="{{ path('pa_general_accueil') }}">{{ 'Accueil_title' | trans }}</a> >> <a href="{{ path('pa_general_mes_annonces') }}">{{ 'Mes_annonces_title' | trans }}</a></p>
+		<!-- /.row -->
 
+		<div class="clear"></div>
+
+		<!-- Portfolio Section -->
+		<div class="col-lg-12">
+		    <h2 class="page-header">{{'h2_offres_title' | trans }}</h2>
+		</div>
+		<!-- Display Content just if the user is connected -->
+		{% if is_granted('ROLE_USER') %}
+		<!-- We check if there are some ads in the database -->
+			{% if entities is not empty %}
+				<!-- For all occurrences of ads -->
+				{% for entity in entities %}
+				    <div class="col-md-4 col-sm-6">
+				        <a href="portfolio-item.html">
+				            <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450" alt="">
+				        </a>
+				    </div>
+				{% endfor %}
+			<!-- No ads in the database -->
+			{% else %}
+				{{'no_result_annonces' | trans}}
+			{% endif %}
+		<!-- If the user is not connnected -->
+		{% else %}
+			<!-- <div class="col-md-4 col-sm-6"> -->
+			<div class="page-header">
+				<p>Bonjour à vous. Pour accéder à votre panier, veuillez tout d'abord vous connecter si vous possédez déjà un compte. Si nous avons la chance de vous accueillir pour la première fois, veuillez vous inscrire en cliquant sur le lien "S'inscrire" un peu plus bas. Bonne journée et bonne visite !</p>
+				<p>FORMULAIRE A METTRE ICI</p>
+			</div>
+		{% endif %}
+		</div>
 	</div>
 	<!-- /.container -->
 {% endblock %}
