--- a/src/PA/GeneralBundle/Resources/views/Default/offres.html.twig
+++ b/src/PA/GeneralBundle/Resources/views/Default/offres.html.twig
@@ -14,6 +14,26 @@
 	<!-- First section -->
 	<div class="row">
 		<h2>Bienvenue sur la page des offres.</h2>
+	    <p>{{ 'fil_ariane_text' | trans }}<a title="Accueil" href="{{ path('pa_general_accueil') }}">{{ 'Accueil_title' | trans }}</a> >> <a href="{{ path('pa_general_offres') }}">{{ 'Offres_title' | trans }}</a></p>
+	    <hr />
+	<!-- /.row -->
+
+	<!-- Portfolio Section -->
+	<div class="row">
+	    <div class="col-lg-12">
+	        <h2 class="page-header">{{'h2_offres_title' | trans }}</h2>
+	    </div>
+	    {% set entities = "" %}
+	    {% if entities is not empty %}
+	    <div class="col-md-4 col-sm-6">
+	        <a href="portfolio-item.html">
+	            <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450" alt="">
+	        </a>
+	    </div>
+	    {% else %}
+	    {{'no_result_offres' | trans}}
+	    {% endif %}
+	</div>
 	<!-- /.row -->
 
 	</div>
