MAJ Annonce, Création Catégorie, Affichage Annonce

--- a/src/PA/AnnonceBundle/Resources/views/Annonce/ajouterannonce.html.twig
+++ b/src/PA/AnnonceBundle/Resources/views/Annonce/ajouterannonce.html.twig
@@ -36,6 +36,7 @@
 		$("#pa_annoncebundle_annonce_an_titre").wrap('<div class="col-xs-3"></div>');
 		$("#pa_annoncebundle_annonce_an_image").wrap('<div class="col-xs-6"></div>');
 		$("#pa_annoncebundle_annonce_an_categorie").wrap('<div class="col-xs-3"></div>');
+		$("#pa_annoncebundle_annonce_an_type").wrap('<div class="col-xs-2"></div>');
 		$("#pa_annoncebundle_annonce_an_prix").wrap('<div class="col-xs-2"></div>');
 		$("#pa_annoncebundle_annonce_an_description").wrap('<div class="col-sm-10"></div>');
 		$("#pa_annoncebundle_annonce_an_departement").wrap('<div class="col-xs-3"></div>');
