--- a/src/PA/GeneralBundle/Resources/views/Default/offres.html.twig
+++ b/src/PA/GeneralBundle/Resources/views/Default/offres.html.twig
@@ -14,7 +14,7 @@
 	<!-- First section -->
 	<div class="row">
 		<h2>Bienvenue sur la page des offres.</h2>
-	    <p>{{ 'fil_ariane_text' | trans }}<a title="Accueil" href="{{ path('pa_general_accueil') }}">{{ 'Accueil_title' | trans }}</a> >> <a href="{{ path('pa_general_offres') }}">{{ 'Offres_title' | trans }}</a></p>
+	    <p>{{ 'fil_ariane_text' | trans }}<a title="Accueil_title" href="{{ path('pa_general_accueil') }}">{{ 'Accueil_title' | trans }}</a> >> <a href="{{ path('pa_general_offres') }}">{{ 'Offres_title' | trans }}</a></p>
 	    <hr />
 	<!-- /.row -->
 
