--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -4,16 +4,19 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="">
-        <meta name="author" content="">
+        <meta name="description" content="Site d'annonces de particulier à particulier - Résultat d'un projet de Programmation WEB.">
+        <meta name="author" content="BETOURNE Joffrey, GIGOU Nicolas, LAGADEC Quentin">
         <title>{% block title %}{{'Welcome' | trans}} !{% endblock %}</title>
         {% block stylesheets %}
-        {% stylesheets 'css/*' %}
+        {% stylesheets '@PAGeneralBundle/Resources/public/css/*' %}
         <link rel="stylesheet" href="{{ asset_url }}" type="text/css" />
         {% endstylesheets %}
         {% endblock %}
-        <script type="text/javascript" src="{{ asset('jquery.js') }}"></script>
-        <script type="text/javascript" src="{{ asset('bootstrap.js') }}"></script>
+        {% block javascripts %}
+        {% javascripts '@PAGeneralBundle/Resources/public/js/*' %}
+        <script type="text/javascript" src="{{ asset_url }}"></script>
+        {% endjavascripts %}
+        {% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
     <body>
@@ -37,16 +40,17 @@
                             <a href="{{ path('pa_general_accueil') }}">{{'Accueil_title'|trans}}</a>
                         </li>
                         <li>
-                            <a href="{{path('pa_general_offres')}}">{{'Offres_title'|trans}}</a>
+                            <a href="{{ path('pa_general_offres') }}">{{'Offres_title'|trans}}</a>
                         </li>
                         <li>
-                            <a href="{{path('pa_general_demandes')}}">{{'Demandes_title'|trans}}</a>
+                            <a href="{{ path('pa_general_demandes') }}">{{'Demandes_title'|trans}}</a>
                         </li>
                         <li>
                             <a href="{{ path('pa_general_mes_annonces') }}">{{'Mes_annonces_title'|trans}}</a>
                         </li>
+                        {% if is_granted('ROLE_USER') or is_granted('ROLE_ADMIN') %}
                         <li class="dropdown">
-                            <a class="dropdown-toggle" data-toggle="dropdown">{{ 'Mon_compte_title'|trans}} <b class="caret"></b></a>
+                            <a class="dropdown-toggle" data-toggle="dropdown">{{ 'Mon_compte_connected_title'|trans}} <b class="caret"></b></a>
                             <ul class="dropdown-menu">
                                 <li>
                                     <a href="{{path('pa_general_mon_panier')}}">{{'Mon_compte_panier_title'|trans}}</a>
@@ -62,6 +66,11 @@
                                 </li>
                             </ul>
                         </li>
+                        {% else %}
+                        <li>
+                            <a href="{{ path('pa_general_connexion') }}">{{'Mon_compte_disconnected_title' | trans}}</a>
+                        </li>
+                        {% endif %}
                     </ul>
                 </div>
                 <!-- /.navbar-collapse -->
