--- a/src/PA/GeneralBundle/Resources/views/Default/contact.html.twig
+++ b/src/PA/GeneralBundle/Resources/views/Default/contact.html.twig
@@ -11,11 +11,43 @@
 	<!-- Mentions Section -->
 	<!-- ================ -->
 
-	<!-- First section -->
 	<div class="row">
-		<h2>Bienvenue sur la page de contact.</h2>
-	<!-- /.row -->
-
-	</div>
-	<!-- /.container -->
+		<h2>{{ 'contact_welcome' | trans }}</h2>
+	    <p>{{ 'fil_ariane_text' | trans }}<a title="Accueil_title" href="{{ path('pa_general_accueil') }}">{{ 'Accueil_title' | trans }}</a> >> <a href="{{ path('pa_general_contact') }}">{{ 'Contact_title' | trans }}</a></p>
+	    <hr />
+		<div class="container">
+				<h1 class="text-center">{{ 'contact_form_title' | trans }}</h1>
+				<div class="clear"></div>
+				<div class="col-sm-8">
+					<form>
+						<div class="row form-group">
+							<div class="col-xs-5">
+								<input id="firstName" class="form-control" name="firstName" type="text" placeHolder="{{ 'contact_champ_prenom' | trans }}" />
+							</div>
+							<div class="col-xs-5">
+								<input id="lastName" class="form-control" name="lastName" type="text" placeHolder="{{ 'contact_champ_nom' | trans }}" />
+							</div>
+						</div>
+						<div class="row form-group">
+							<div class="col-xs-5">
+								<input class="form-control" name="email" type="email" placeHolder="{{ 'contact_champ_email' | trans }}" />
+							</div>
+							<div class="col-xs-5">
+								<input class="form-control" name="phone" type="email" placeHolder="{{ 'contact_champ_email_confirm' | trans }}" />
+							</div>
+						</div>
+						<div class="row form-group">
+							<div class="col-xs-10">
+								<textarea class="form-control" rows="5">{{ 'contact_champ_message' | trans }}</textarea>
+							</div>
+						</div>
+						<div class="row form-group">
+							<div class="col-xs-10">
+								<button class="btn btn-default pull-right">{{ 'contact_champ_envoyer' | trans }}</button>
+							</div>
+						</div>
+					</form> <!-- /.form -->
+				</div> <!-- /.col-sm-8 -->
+		</div> <!-- /.container -->
+	</div> <!-- /.row -->
 {% endblock %}
