--- a/src/PA/GeneralBundle/Resources/views/Default/inscription.html.twig
+++ b/src/PA/GeneralBundle/Resources/views/Default/inscription.html.twig
@@ -14,7 +14,7 @@
 	<!-- First section -->
 	<div class="row">
 		<h2>{{ 'connexion_welcome' | trans }}</h2>
-	    <p>{{ 'fil_ariane_text' | trans }}<a title="Accueil_title" href="{{ path('pa_general_accueil') }}">{{ 'Accueil_title' | trans }}</a> >> <a href="{{ path('pa_general_mes_annonces') }}">{{ 'Mon_compte_disconnected_title' | trans }}</a></p>
+	    <p>{{ 'fil_ariane_text' | trans }}<a title="Accueil_title" href="{{ path('pa_general_accueil') }}">{{ 'Accueil_title' | trans }}</a> >> <a href="{{ path('pa_general_inscription') }}">{{ 'Inscription_title' | trans }}</a></p>
 		<!-- /.row -->
 
 		<div class="clear"></div>
