--- a/src/PA/GeneralBundle/Resources/views/Default/index.html.twig
+++ b/src/PA/GeneralBundle/Resources/views/Default/index.html.twig
@@ -59,7 +59,7 @@
 	            </div>
 	            <div class="panel-body">
 	                <p>{{'panel_heading_1_content' | trans}}</p>
-	                <a href="#" class="btn btn-default">{{ 'panel_heading_btn' | trans }}</a>
+	                <a href="{{ path('pa_general_offres') }}" class="btn btn-default">{{ 'panel_heading_btn' | trans }}</a>
 	            </div>
 	        </div>
 	    </div>
@@ -70,7 +70,7 @@
 	            </div>
 	            <div class="panel-body">
 	                <p>{{'panel_heading_2_content' | trans}}</p>
-	                <a href="#" class="btn btn-default">{{ 'panel_heading_btn' | trans }}</a>
+	                <a href="{{ path('pa_general_demandes') }}" class="btn btn-default">{{ 'panel_heading_btn' | trans }}</a>
 	            </div>
 	        </div>
 	    </div>
@@ -81,7 +81,7 @@
 	            </div>
 	            <div class="panel-body">
 	                <p>{{'panel_heading_3_content' | trans}}</p>
-	                <a href="#" class="btn btn-default">{{ 'panel_heading_btn' | trans }}</a>
+	                <a href="{{ path('pa_general_mon_compte') }}" class="btn btn-default">{{ 'panel_heading_btn' | trans }}</a>
 	            </div>
 	        </div>
 	    </div>
@@ -93,33 +93,16 @@
 	    <div class="col-lg-12">
 	        <h2 class="page-header">{{'annonces_portfolio_title' | trans }}</h2>
 	    </div>
-	    {% set entities = "tt" %}
 	    {% if entities is not empty %}
-	    <div class="col-md-4 col-sm-6">
-	        <a href="portfolio-item.html">
-	            <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450&text=Annonce 1" alt="">
-	        </a>
-	    </div>
-	    <div class="col-md-4 col-sm-6">
-	        <a href="portfolio-item.html">
-	            <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450&text=Annonce 2" alt="">
-	        </a>
-	    </div>
-	    <div class="col-md-4 col-sm-6">
-	        <a href="portfolio-item.html">
-	            <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450&text=Annonce 3" alt="">
-	        </a>
-	    </div>
-	    <div class="col-md-4 col-sm-6">
-	        <a href="portfolio-item.html">
-	            <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450&text=Annonce 4" alt="">
-	        </a>
-	    </div>
-	    <div class="col-md-4 col-sm-6">
-	        <a href="portfolio-item.html">
-	            <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450&text=Annonce 5" alt="">
-	        </a>
-	    </div>
+	    {% for entity in entities %}
+		    <div class="col-md-4 col-sm-6">
+		    	<h4>{{entity.antitre}}</h4>
+		        <a href="portfolio-item.html">
+		            <img class="img-responsive img-portfolio img-hover" src="{{ entity.animage }}" alt="">
+		        </a>
+		        {{ entity.andescription }}
+		    </div>
+		{% endfor %}
 	    {% else %}
 	    {{'no_result_annonces' | trans}}
 	    {% endif %}
