--- a/src/PA/GeneralBundle/Resources/views/Default/offres.html.twig
+++ b/src/PA/GeneralBundle/Resources/views/Default/offres.html.twig
@@ -14,24 +14,28 @@
 	<!-- First section -->
 	<div class="row">
 		<h2>Bienvenue sur la page des offres.</h2>
-	    <p>{{ 'fil_ariane_text' | trans }}<a title="Accueil_title" href="{{ path('pa_general_accueil') }}">{{ 'Accueil_title' | trans }}</a> >> <a href="{{ path('pa_general_offres') }}">{{ 'Offres_title' | trans }}</a></p>
-	    <hr />
+	    <p>{{ 'fil_ariane_text' | trans }}<a title="{{ 'Accueil_title' | trans}}" href="{{ path('pa_general_accueil') }}">{{ 'Accueil_title' | trans }}</a> >> <a href="{{ path('pa_general_offres') }}">{{ 'Offres_title' | trans }}</a></p>
 	<!-- /.row -->
 
-	<!-- Portfolio Section -->
+	<!-- Ads Section -->
 	<div class="row">
 	    <div class="col-lg-12">
 	        <h2 class="page-header">{{'h2_offres_title' | trans }}</h2>
 	    </div>
-	    {% set entities = "" %}
 	    {% if entities is not empty %}
-	    <div class="col-md-4 col-sm-6">
-	        <a href="portfolio-item.html">
-	            <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450" alt="">
-	        </a>
-	    </div>
+		    {% for entity in entities %}
+		    	{% if entity.antype == "offre" %}
+				    <div class="col-md-4 col-sm-6">
+				    	<h4>{{entity.antitre}}</h4>
+				        <a href="portfolio-item.html">
+				            <img class="img-responsive img-portfolio img-hover" src="{{ entity.animage }}" alt="">
+				        </a>
+				        {{ entity.andescription }}
+				    </div>
+			    {% endif %}
+		    {% endfor %}
 	    {% else %}
-	    {{'no_result_offres' | trans}}
+	    {{'no_result_demandes' | trans}}
 	    {% endif %}
 	</div>
 	<!-- /.row -->
