--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -58,6 +58,14 @@
                                 <li>
                                     <a href="{{path('pa_general_mon_compte')}}">{{'Mon_compte_espace_title'|trans}}</a>
                                 </li>
+                                {% if is_granted('ROLE_ADMIN') %}
+                                <li>
+                                    <hr />
+                                </li>
+                                <li>
+                                    <a href="{{ path('pa_general_interface') }}">{{ 'interfaceGestion_title'| trans }}</a>
+                                </li>
+                                {% endif %}
                                 <li>
                                     <hr />
                                 </li>
