--- a/src/PA/PanierBundle/Resources/views/Panier/index.html.twig
+++ b/src/PA/PanierBundle/Resources/views/Panier/index.html.twig
@@ -1,1 +1,15 @@
-Hello {{ name }}!
+{% if panier is not empty %}
+	{{panier.paId}}
+	<p>Liste des annonces</p>
+    {% for annonce in panier.paannonces %}
+	    <div class="col-md-4 col-sm-6">
+	    	<h4>{{annonce.antitre}}</h4>
+	        <a href="portfolio-item.html">
+	            <img class="img-responsive img-portfolio img-hover" src="{{ annonce.animage }}" alt="">
+	        </a>
+	        {{ annonce.andescription }}
+	    </div>
+	{% endfor %}
+{% else %}
+    {{'no_result_annonces' | trans}}
+{% endif %}
