--- a/src/PA/UserBundle/Resources/views/layout.html.twig
+++ b/src/PA/UserBundle/Resources/views/layout.html.twig
@@ -61,7 +61,7 @@
 							                </div>
 							                <div class="form-group">
 							                	<div class="col-md-offset-0 col-md-8">
-							                		<input type="submit" id="_submit" name="_submit" value="Connexion" lass="btn btn-success btn btn-success">
+							                		<input type="submit" id="_submit" name="_submit" value="Connexion" class="btn btn-success btn btn-success">
 							                	</div>
 							                </div>
 							                <input type="hidden" id="remember_me" name="_remember_me" value="on">
