MAJ Panier et base.html

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -53,7 +53,7 @@
                             <a class="dropdown-toggle" data-toggle="dropdown">{{ 'Mon_compte_connected_title'|trans}} <b class="caret"></b></a>
                             <ul class="dropdown-menu">
                                 <li>
-                                    <a href="{{path('pa_general_mon_panier')}}">{{'Mon_compte_panier_title'|trans}}</a>
+                                    <a href="{{path('pa_panier_afficher')}}">{{'Mon_compte_panier_title'|trans}}</a>
                                 </li>
                                 <li>
                                     <a href="{{path('pa_general_mon_compte')}}">{{'Mon_compte_espace_title'|trans}}</a>
