--- a/src/PA/GeneralBundle/Resources/views/Default/index.html.twig
+++ b/src/PA/GeneralBundle/Resources/views/Default/index.html.twig
@@ -59,7 +59,7 @@
 	            </div>
 	            <div class="panel-body">
 	                <p>{{'panel_heading_1_content' | trans}}</p>
-	                <a href="{{ path('pa_general_offres') }}" class="btn btn-default">{{ 'panel_heading_btn' | trans }}</a>
+	                <a href="{{ path('pa_annonce_afficher_offre') }}" class="btn btn-default">{{ 'panel_heading_btn' | trans }}</a>
 	            </div>
 	        </div>
 	    </div>
@@ -70,7 +70,7 @@
 	            </div>
 	            <div class="panel-body">
 	                <p>{{'panel_heading_2_content' | trans}}</p>
-	                <a href="{{ path('pa_general_demandes') }}" class="btn btn-default">{{ 'panel_heading_btn' | trans }}</a>
+	                <a href="{{ path('pa_annonce_afficher_demande') }}" class="btn btn-default">{{ 'panel_heading_btn' | trans }}</a>
 	            </div>
 	        </div>
 	    </div>
