--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -40,10 +40,10 @@
                             <a href="{{ path('pa_general_accueil') }}">{{'Accueil_title'|trans}}</a>
                         </li>
                         <li>
-                            <a href="{{ path('pa_general_offres') }}">{{'Offres_title'|trans}}</a>
+                            <a href="{{ path('pa_annonce_afficher_offre') }}">{{'Offres_title'|trans}}</a>
                         </li>
                         <li>
-                            <a href="{{ path('pa_general_demandes') }}">{{'Demandes_title'|trans}}</a>
+                            <a href="{{ path('pa_annonce_afficher_demande') }}">{{'Demandes_title'|trans}}</a>
                         </li>
                         {% if is_granted('ROLE_USER') or is_granted('ROLE_ADMIN') %}
                         <li>
