--- a/src/PA/PanierBundle/Resources/views/Panier/index.html.twig
+++ b/src/PA/PanierBundle/Resources/views/Panier/index.html.twig
@@ -19,13 +19,15 @@
 	    {% if panier is not empty %}
 			<p>Contenu de mon panier :</p>
 		    {% for annonce in panier.paannonces %}
-			    <div class="col-md-4 col-sm-6">
-			    	<h4>{{annonce.antitre}}</h4>
-			        <a href="portfolio-item.html">
-			            <img class="img-responsive img-portfolio img-hover" src="{{ annonce.animage }}" alt="">
-			        </a>
-			        {{ annonce.andescription }}
-			    </div>
+		    	{% if annonce.antype == 'offre' %}
+				    <div class="col-md-4 col-sm-6">
+				    	<h4>{{annonce.antitre}}</h4>
+				        <a href="portfolio-item.html">
+				            <img class="img-responsive img-portfolio img-hover" src="{{ annonce.animage }}" alt="">
+				        </a>
+				        {{ annonce.andescription }}
+				    </div>
+				{% endif %}
 			{% endfor %}
 		{% else %}
 		    {{'no_result_annonces' | trans}}
